@@ -78,6 +78,9 @@ EOD;
 		$config=require($entryScript);
 		ob_end_clean();
 
+		restore_error_handler();
+		restore_exception_handler();
+
 		// oops, the entry script turns out to be a config file
 		if(is_array($config))
 		{
@@ -118,6 +121,9 @@ EOD;
 
 	protected function runShell()
 	{
+		// disable E_NOTICE so that the shell is more friendly
+		error_reporting(E_ALL ^ E_NOTICE);
+
 		$_runner_=new CConsoleCommandRunner;
 		$_runner_->addCommands(dirname(__FILE__).'/shell');
 		$_runner_->addCommands(Yii::getPathOfAlias('application.commands.shell'));
